RESOLVED FIXED281468
Regression(285161@main) Crash in debug under WebSQLiteDatabaseTracker::setIsHoldingLockedFiles(bool)
https://bugs.webkit.org/show_bug.cgi?id=281468
Summary Regression(285161@main) Crash in debug under WebSQLiteDatabaseTracker::setIsH...
Chris Dumez
Reported 2024-10-14 19:03:38 PDT
Crash in debug under WebSQLiteDatabaseTracker::setIsHoldingLockedFiles(bool): ``` ASSERTION FAILED: canSafelyBeUsed() /Users/annevk/Dev/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/WeakPtr.h(94) : T *WTF::WeakPtr<WebKit::NetworkProcess>::get() const [T = WebKit::NetworkProcess, WeakPtrImpl = WTF::DefaultWeakPtrImpl, PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>] 1 0x119c209fc WTF::WeakPtr<WebKit::NetworkProcess, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>::get() const 2 0x119c20958 WebKit::NetworkProcess::NetworkProcess(WebKit::AuxiliaryProcessInitializationParameters&&)::$_0::operator()(bool) const 3 0x119c20810 WTF::Detail::CallableWrapper<WebKit::NetworkProcess::NetworkProcess(WebKit::AuxiliaryProcessInitializationParameters&&)::$_0, void, bool>::call(bool) 4 0x11840ec7c WTF::Function<void (bool)>::operator()(bool) const 5 0x11a4450bc WebKit::WebSQLiteDatabaseTracker::setIsHoldingLockedFiles(bool) 6 0x11a445210 WebKit::WebSQLiteDatabaseTracker::willBeginFirstTransaction() 7 0x306833048 WebCore::SQLiteDatabaseTracker::incrementTransactionInProgressCount() 8 0x303854a38 WebCore::SQLiteTransactionInProgressAutoCounter::SQLiteTransactionInProgressAutoCounter() 9 0x30383e468 WebCore::SQLiteTransactionInProgressAutoCounter::SQLiteTransactionInProgressAutoCounter() 10 0x30682eb60 WebCore::SQLiteDatabase::open(WTF::String const&, WebCore::SQLiteDatabase::OpenMode, WTF::OptionSet<WebCore::SQLiteDatabase::OpenOptions>) 11 0x119b573d4 WebKit::DatabaseUtilities::openDatabaseAndCreateSchemaIfNecessary() 12 0x119de33cc WebKit::ResourceLoadStatisticsStore::openITPDatabase() 13 0x119de251c WebKit::ResourceLoadStatisticsStore::openAndUpdateSchemaIfNecessary() 14 0x119de21dc WebKit::ResourceLoadStatisticsStore::ResourceLoadStatisticsStore(WebKit::WebResourceLoadStatisticsStore&, WTF::SuspendableWorkQueue&, WebKit::ShouldIncludeLocalhost, WTF::String const&, PAL::SessionID) 15 0x119de2e60 WebKit::ResourceLoadStatisticsStore::ResourceLoadStatisticsStore(WebKit::WebResourceLoadStatisticsStore&, WTF::SuspendableWorkQueue&, WebKit::ShouldIncludeLocalhost, WTF::String const&, PAL::SessionID) 16 0x119e4b2cc WebKit::ResourceLoadStatisticsStore::create(WebKit::WebResourceLoadStatisticsStore&, WTF::SuspendableWorkQueue&, WebKit::ShouldIncludeLocalhost, WTF::String const&, PAL::SessionID) 17 0x119e4b1ac WebKit::WebResourceLoadStatisticsStore::WebResourceLoadStatisticsStore(WebKit::NetworkSession&, WTF::String const&, WebKit::ShouldIncludeLocalhost, WebCore::ResourceLoadStatistics::IsEphemeral)::$_0::operator()() const 18 0x119e4b090 WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::WebResourceLoadStatisticsStore(WebKit::NetworkSession&, WTF::String const&, WebKit::ShouldIncludeLocalhost, WebCore::ResourceLoadStatistics::IsEphemeral)::$_0, void>::call() 19 0x1183a4468 WTF::Function<void ()>::operator()() const 20 0x119e17f74 WebKit::WebResourceLoadStatisticsStore::postTask(WTF::Function<void ()>&&)::'lambda'()::operator()() const ```
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-14 19:04:10 PDT
Chris Dumez
Comment 2 2024-10-14 19:31:06 PDT
EWS
Comment 3 2024-10-14 22:21:29 PDT
Committed 285177@main (b30afe7d03bc): <https://commits.webkit.org/285177@main> Reviewed commits have been landed. Closing PR #35193 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.