Regression(285161@main) Crash in debug under WebSQLiteDatabaseTracker::setIsHoldingLockedFiles(bool) https://bugs.webkit.org/show_bug.cgi?id=281468 rdar://137923861

Reviewed by Ben Nham.

Make sure we call setIsHoldingLockedFiles() on the main run loop since it calls
the `m_isHoldingLockedFilesHandler` lambda which ends up ref'ing the NetworkProcess
object. It is only safe to ref / deref (and use) the NetworkProcess object on the
main run loop.

* Source/WebKit/Shared/WebSQLiteDatabaseTracker.cpp:
(WebKit::WebSQLiteDatabaseTracker::willBeginFirstTransaction):

Canonical link: https://commits.webkit.org/285177@main